--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
         <div class="container">
             <h2 data-aos="fade-up">Resume</h2>
             <div class="resume-content">
-                <embed src="c:\Users\dsaj1\Downloads\Kudupudi_BinduShree_resume (3).pdf" type="application/pdf" width="100%" height="600px" data-aos="fade-up">
-                <a href="c:\Users\dsaj1\Downloads\Kudupudi_BinduShree_resume (3).pdf" download class="btn resume-btn" data-aos="fade-up">Download Resume</a>
+                <embed src="files/resume.pdf" type="application/pdf" width="100%" height="600px" data-aos="fade-up">
+                <a href="files/resume.pdf" download class="btn resume-btn" data-aos="fade-up">Download Resume</a>
             </div>
         </div>
     </section>
